@@ -1,11 +1,12 @@
 debian-installer (20040425) UNRELEASED; urgency=low
 
   * Bastian Blank
-    - busybox is not longer kernel dependend.
+    - busybox is not longer kernel dependent.
     - Only call depmod if there are modules in the tree.
     - Make TEMP and DEST resolvable in the config.
   * Thiemo Seufer
     - mips config cleanup, no changes in behaviour.
+    - Cleanup the Makefile's System.map handling.
 
  -- Bastian Blank <waldi@debian.org>  Sun, 25 Apr 2004 11:21:52 +0200
 
